Fixed the navbar overlapping carousel

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@ body{
   /* font-family: 'Contrail One', cursive; */
   /* font-family: 'Roboto', sans-serif; */
   font-family: 'Lato', sans-serif;
+  padding-top: 120px;
 }
 
 #logo{
